# WaterSplat-SLAM

./: .gitignore  .gitmodules  LICENSE.md  README.md  environment.yaml  lowlight_datasets  main.py  pyproject.toml  requirements.txt
config/: 5_pool.yaml  Curasao.yaml  Jap_RedSea.yaml  Panama.yaml  RedSea.yaml  base.yaml  big_gate.yaml  pipe_local.yaml  pool_up.yaml  pool_up2.yaml  undistorted5.yaml
gaussian/renderer/: __init__.py
gaussian/scene/: gaussian_model.py  gaussian_model_mip.py  gaussian_model_water.py
gaussian/utils/: camera_utils.py  eval_utils.py  logging_utils.py  loss_utils.py  slam_utils.py
gui/: gui_utils.py  slam_gui.py
gui_water/: gui_utils.py  slam_gui.py
mast3r_slam/: clipseg.py  config.py  dataloader.py  evaluate.py  evo_eval.py  frame.py  generate_voxel.py  geometry.py  global_opt.py  gs_backend.py  lietorch_utils.py  mast3r_utils.py  network.py  run_eval.sh  segmodel.py  tracker.py  visualization.py  wt_gs_backend.py
scripts/: run_our_data.sh
water_gaussian/: lowlight_underwater_model.py  rendering.py  setup.py  train.py
water_gaussian/cudalight/: _backend.py  _torch_impl.py  _wrapper.py
water_gaussian/cudalight/csrc/: backward.cu  backward.cuh  bindings.cu  bindings.h  forward.cu  forward.cuh  helpers.cuh
water_gaussian/rasterizerlight/: distributed.py  project_gaussians.py  rasterize.py
water_gaussian/renderer/: __init__.py
water_gaussian/utils/: __init__.py  gsplat_utils.py  sh.py  utils.py
