[build-system]
requires = ["setuptools==70.0.0", "torch"]
build-backend = "setuptools.build_meta"

[project]
name = "WaterSplat-SLAM"
version = "0.0.1"
dependencies = [
    "numpy",
    "einops",
    "evo",
    "natsort",
    "plyfile",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mast3r_slam"]
namespaces = false
